<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Sensor Logger</string>

    <string name="introheader">Introduction</string>
    <string name="intro1">
        This application records any changes in your phone\'s accelerometer and
        magnetic field sensors over a period of 50 seconds. The purpose is to
        automatically determine what activity you are performing (such as
        walking, standing or sitting).
    </string>
    <string name="intro2">
        Once 1,000 entries have been recorded (around 50 seconds), the data
        will be analysed to try and determine your activity. You can then say
        whether or not this is correct, and submit the data and the verdict
        to a website in order to help improve the software in the future.
    </string>
    <string name="intro3">
        When you click Begin there will be a 10 second delay to allow you
        to put the phone in your pocket or usual carrying place. After that,
        data will be recorded for approximately 50 seconds. You\'ll hear a
        beep when it\'s done.
    </string>
    <string name="continuebutton">Begin</string>

    <string name="countdownheader">Starting in...</string>
    <string name="countdowninitial"></string>
    <string name="countdownblurb">Put the phone away and wait for the beep!</string>

    <string name="error_disconnected">Error: disconnected from service</string>

    <string name="recordingheader">Recording...</string>
    <string name="analysingheader">Analysing...</string>
    <string name="recordinginitial"></string>
    <string name="recordingwait">Please wait</string>

    <string name="resultsheader">Results</string>
    <string name="resultsblurb">Based on the data collected, it would appear
    that you were...</string>
    <string name="resultsresult">\?</string>
    <string name="resultscorrect">Is this correct?</string>

    <string name="thanksheader">Thank you</string>
    <string name="thanksblurb">The data you have collected has been submitted
    for analysis, and will be used to improve the classification algorithm
    in the future.</string>
    <string name="thankslinktext">You can view your data graphically, and find
    out more about this project, at:</string>

    <string name="yesbutton">Yes</string>
    <string name="nobutton">No</string>

    <string name="correct_activity">What activity were you actually performing?</string>
    <string name="correct_title">Enter correction</string>
    <string name="correct_button">Submit</string>

    <string name="activity_unknown">Unknown</string>
    <string name="activity_walking">Walking</string>
    <string name="activity_walking_stairs_up">Walking (up stairs)</string>
    <string name="activity_walking_stairs_down">Walking (down stairs)</string>
    <string name="activity_dancing">Dancing</string>
    <string name="activity_idle_standing">Standing still</string>
    <string name="activity_idle_sitting">Sitting down</string>
    <string name="activity_vehicle_bus">Travelling by bus</string>
    <string name="activity_vehicle_car">Travelling by car</string>
</resources>