<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5px">
    <TextView
        android:id="@+id/resultsheader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultsheader"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/resultsblurb"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultsblurb"
        android:layout_marginBottom="15dip"/>
    <TextView
        android:id="@+id/resultsresult"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultsresult"
        android:textSize="25sp"
        android:layout_gravity="fill"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="15dip"/>
    <TextView
        android:id="@+id/resultscorrect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultscorrect"
        android:layout_marginBottom="15dip"/>
    <Button
        android:id="@+id/resultsyes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/yesbutton"/>
    <Button
        android:id="@+id/resultsno"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/nobutton"/>
</LinearLayout>