<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5px">
    <TextView
        android:id="@+id/introheader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/introheader"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="fill"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/intro1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/introheader"
                android:text="@string/intro1"
                android:layout_marginBottom="15dip"/>
            <TextView
                android:id="@+id/intro2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/intro1"
                android:text="@string/intro2"
                android:layout_marginBottom="15dip"/>
            <TextView
                android:id="@+id/intro3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/intro2"
                android:text="@string/intro3"
                android:layout_marginBottom="15dip"/>
        </RelativeLayout>
    </ScrollView>
    <Button
        android:id="@+id/introstart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/continuebutton"/>
</LinearLayout>