<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5px">
    <TextView
        android:id="@+id/recordingheader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/recordingheader"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/recordingcount"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_gravity="fill"
        android:gravity="center"
        android:text="@string/recordinginitial"
        android:textSize="100sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/recordingblurb"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/recordingwait"/>
</LinearLayout>