<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5px">
    <TextView
        android:id="@+id/countdownheader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/countdownheader"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/countdowntimer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_gravity="fill"
        android:gravity="center"
        android:text="@string/countdowninitial"
        android:textSize="100sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/countdownblurb"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/countdownblurb"/>
</LinearLayout>