<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5px">
    <TextView
        android:id="@+id/thanksheader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/thanksheader"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dip"/>
    <TextView
        android:id="@+id/thanksblurb"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/thanksblurb"
        android:layout_marginBottom="25dip"/>
    <TextView
        android:id="@+id/thankslinktext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/thankslinktext"
        android:layout_marginBottom="15dip"/>
    <TextView
        android:id="@+id/thankslink"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        android:autoLink="all"
        android:linksClickable="true"
        android:gravity="center"/>
</LinearLayout>